* 0.122

- Disable Jackson property mutator inference

* 0.121

- Fix configuration property to include and exclude HTTPS cipher suites

* 0.120

- Add configuration property to include and exclude HTTPS cipher suites

* 0.119

- Reduce contention during lifecycle tracking
- Add getMaxContentLength to HTTP client

* 0.118

- Improve messages for configuration errors
- Add JMX stat for days until HTTPS certificate expires

* 0.117

- Refresh Kerberos credentials for HTTP client before they expire

* 0.116

- Add configuration for HTTP selector and acceptor thread pools
- Fix config defaults bindings with annotation class
- Fix config defaults bindings for HTTP clients

* 0.115

- Add more MoreFutures utilities

* 0.114

- Make HttpServer logging more configurable
- Make configuration names for Logging and HttpServer logging match

* 0.113

- Change kerberos service principal format to correct serviceName@host
- Replace Guava Optional in TestingNodeModule and JettyHttpClient
- Report correct binding source for custom binders

* 0.112

- Always use keytab for kerberos auth

* 0.111

- Support JSON serialization of Java 7 types
- Add SPNEGO support to HTTP client
- Upgrade Jetty to 9.2.11.v20150529 to fix an issue that causes HTTP requests to hang
- Allow disabling console and file logging simultaneously

* 0.110

- Fix log levels being reset by garbage collection
- Reduce default http response buffer size from 64KB to zero bytes
- Add MoreFutures which contains utility methods for futures

* 0.109

- Add framework to override defaults of any configuration object

* 0.108

- Change default HTTP server accept queue size to 8000 from 50
- Upgrade to Airbase 38
- Exclude link local addresses in NodeInfo

* 0.107

- Remove dependency on SLF4J from log manager

* 0.106

- Upgrade to Airbase 36
- Upgrade to Jetty 9.2.11.M0
- Enable Jetty Client connection sweeper
- Reduce JettyHttpClient selectors to 2

* 0.105

- Upgrade to Airbase 35
- Upgrade to Jetty 9.2.10.v20150310
